--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <app-menu-sidebar [contentId]="'main-content'" [menuId]="'main-menu'"></app-menu-sidebar>
+  <ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
