--- a/src/app/shared/ui/empty-state/empty-state.component.html
+++ b/src/app/shared/ui/empty-state/empty-state.component.html
@@ -7,9 +7,9 @@
         <ion-img src="assets/helps_icons/empty.png"></ion-img>
       </div>
 
-      <ion-button class="add-first" fill="clear" shape="round">
+      <!-- <ion-button class="add-first" fill="clear" shape="round">
         <ion-icon slot="icon-only" name="add"></ion-icon>
-      </ion-button>
+      </ion-button> -->
 
       <p class="hint">لا توجد أي دورة حالياً، أضف أول دورة</p>
     </div>
