--- a/src/app/features/dashboard/dashboard.page.html
+++ b/src/app/features/dashboard/dashboard.page.html
@@ -1,29 +1,7 @@
-<!-- <ion-header>
-  <ion-toolbar class="toolbar-primary">
-    <ion-buttons slot="start">
-      <ion-button fill="clear">
-        <ion-icon name="menu-outline"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-
-    <ion-title>
-      <div class="title-stack">
-        <span class="user-name">Abdallah Ahmed</span>
-      </div>
-    </ion-title>
-
-    <ion-buttons slot="end">
-      <ion-button fill="clear">
-        <ion-icon name="notifications-outline"></ion-icon>
-      </ion-button>
-      <ion-button fill="clear">
-        <ion-icon name="settings-outline"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header> -->
-
 <ion-content [fullscreen]="true" class="ion-padding toolbar-primary" dir="rtl">
+  <div class="header">
+    <app-header title="Abdallah Ahmed" right_icon="" left_icon=""></app-header>
+  </div>
 
   <div class="content">
   <!-- Helper Tools -->
@@ -42,28 +20,15 @@
   <section class="section-card">
     <div class="section-header">
       <h2>الدورات <span class="count">(4)</span></h2>
-      <app-button icon="add-outline" text="أضف المزيد" (senData)="addMore($event)"></app-button>
-      <!-- <ion-button size="small" class="add-more" shape="round">
-        <ion-icon slot="start" name="add-outline"></ion-icon>
-        أضف المزيد
-      </ion-button> -->
+      <!-- <app-button icon="add-outline" text="أضف المزيد" (senData)="addMore($event)"></app-button> -->
+      <app-modal (save)="openAccordingFn()"></app-modal>
+      <!-- <app-accordion *ngIf="openAccording"></app-accordion> -->
     </div>
 
-    <!-- Empty state card -->
+    <!-- empty state -->
+     <div>
      <app-empty-state></app-empty-state>
-    <!-- <div class="empty-card">
-      <div class="empty-illustration">
-        <ion-icon name="home-outline"></ion-icon>
-        <ion-icon name="medkit-outline" class="overlap"></ion-icon>
-        <ion-icon name="paw-outline" class="chicken"></ion-icon>
-      </div>
-
-      <ion-button class="add-first" fill="clear" shape="round">
-        <ion-icon slot="icon-only" name="add"></ion-icon>
-      </ion-button>
-
-      <p class="hint">لا توجد أي دورة حالياً، أضف أول دورة</p>
-    </div> -->
+     </div>
   </section>
 
   <div style="height: 16px"></div>
