--- a/src/app/features/cost/cost.page.html
+++ b/src/app/features/cost/cost.page.html
@@ -3,6 +3,6 @@
     <app-header title="Abdallah Ahmed" right_icon="" left_icon=""></app-header>
   </div>
 <div class="content">
-  <app-accordion></app-accordion>
+  <app-accordion [accordingData]="accordingData"></app-accordion>
 </div>
 </ion-content>
