--- a/src/app/shared/ui/accordion/accordion.component.scss
+++ b/src/app/shared/ui/accordion/accordion.component.scss
@@ -20,3 +20,14 @@ div[slot='content'] {
   background: rgba(var(--ion-color-rose-rgb), 0.25);
   color: var(--ion-color-text);
 }
+
+.ion-padding{
+    --padding-start: 0px !important;
+    padding-top: 0px !important;
+}
+
+ion-select{
+  background: #f3f5f8;
+  border-radius: 10px;
+  padding: 0 15px;
+}
