--- a/src/app/shared/ui/header/header.component.scss
+++ b/src/app/shared/ui/header/header.component.scss
@@ -2,7 +2,7 @@ ion-header{
   ion-toolbar{
     --background: transparent !important;
     --border-width:0px !important;
-    padding: 10px;
+    padding: 20px 10px;
     box-shadow: none;
     color: var(--ion-color-primary-contrast);
   }
