--- a/src/app/shared/ui/menu-sidebar/menu-sidebar.component.html
+++ b/src/app/shared/ui/menu-sidebar/menu-sidebar.component.html
@@ -18,27 +18,32 @@
     </div>
        <!-- Menu items -->
     <ion-list lines="none" class="menu-list">
-      <ion-item button routerLink="/tabs/profile">
+      <ion-item button routerLink="/dashboard" (click)="close()">
+        <ion-icon slot="start" name="home-outline"></ion-icon>
+        <ion-label> الصفحة الرئيسية </ion-label>
+      </ion-item>
+
+      <ion-item button routerLink="/tabs/profile" (click)="close()">
         <ion-icon slot="start" name="person-outline"></ion-icon>
         <ion-label>الملف الشخصي</ion-label>
       </ion-item>
 
-      <ion-item button routerLink="/tabs/reports">
+      <ion-item button routerLink="/tabs/reports" (click)="close()">
         <ion-icon slot="start" name="time-outline"></ion-icon>
         <ion-label>إحصائيات</ion-label>
       </ion-item>
 
-      <ion-item button routerLink="/tabs/settings">
+      <ion-item button routerLink="/tabs/settings" (click)="close()">
         <ion-icon slot="start" name="settings-outline"></ion-icon>
         <ion-label>إعدادات</ion-label>
       </ion-item>
 
-      <ion-item button routerLink="/tabs/help">
+      <ion-item button routerLink="/tabs/help" (click)="close()">
         <ion-icon slot="start" name="help-circle-outline"></ion-icon>
         <ion-label>المساعدة والتعليقات</ion-label>
       </ion-item>
 
-      <ion-item button class="logout" (click)="null">
+      <ion-item button routerLink="/login" class="logout" (click)="close()" >
         <ion-icon slot="start" name="log-out-outline"></ion-icon>
         <ion-label>تسجيل الخروج</ion-label>
       </ion-item>
